adds .gitignore, common.scss and changes in existing files

--- a/src/blank.html
+++ b/src/blank.html
@@ -45,28 +45,11 @@
         </div>
     </div>
 </header>
-
     <main style="display: flex; padding: 50px 0 200px;">
     <div style="margin: 0 auto;">
-
-
-
-
-        <div class="sorting">
-            <label class="sorting__label" for="sorting-select">Сортировать по:</label>
-            <span class="sorting__shield-left"></span>
-            <span class="sorting__shield-up"></span>
-            <span class="sorting__shield-right"></span>
-            <span class="sorting__shield-bottom"></span>
-            <select class="sorting__select" name="sorting-select" id="sorting-select">
-                <option>популярности</option>
-            </select>
-        </div>
-
-
+        <p style="font-size: 50px">Welcome to blank.html!</p>
     </div>
 </main>
-
     <footer class="site-footer">
     <div class="site-footer__container">
         <div class="site-footer__contacts">
