--- a/src/catalog.html
+++ b/src/catalog.html
@@ -16,9 +16,9 @@
                 </button>
                 <a class="site-logo site-logo--header" href="index.html">conquest</a>
                 <ul class="site-header-menu site-header-menu--none">
-                    <li><a class="header-menu__menu-link header-menu__menu-link--active" href="catalog.html">Каталог</a></li>
-                    <li><a class="header-menu__menu-link" href="#">Акции</a></li>
-                    <li><a class="header-menu__menu-link" href="#">Доставка</a></li>
+                    <li><a class="header-menu__menu-link header-menu__menu-link--active" href="#">Каталог</a></li>
+                    <li><a class="header-menu__menu-link" href="blank.html">Акции</a></li>
+                    <li><a class="header-menu__menu-link" href="blank.html">Доставка</a></li>
                     <li><a class="header-menu__menu-link" href="https://htmlacademy.ru/">Контакты</a></li>
                 </ul>
             </nav>
@@ -467,28 +467,28 @@
             <div class="site-footer__about">
                 <p class="site-footer__heading">О компании</p>
                 <ul class="site-footer__list">
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Наши магазины</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Вакансии</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Сертификаты</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Отзывы</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Наши магазины</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Вакансии</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Сертификаты</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Отзывы</a></li>
                 </ul>
             </div>
             <div class="site-footer__info">
                 <p class="site-footer__heading">Покупателям</p>
                 <ul class="site-footer__list">
                     <li><a class="site-footer__link site-footer__link--hover" href="#">Каталог товаров</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Как заказать?</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">FAQ</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Корпоративным клиентам</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Как заказать?</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">FAQ</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Корпоративным клиентам</a></li>
                 </ul>
             </div>
             <div class="site-footer__options">
                 <p class="site-footer__heading">Оплата и доставка</p>
                 <ul class="site-footer__list">
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Способы оплаты</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Время доставки</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Гарантии и ремонт</a></li>
-                    <li><a class="site-footer__link site-footer__link--hover" href="#">Возврат и компенсация</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Способы оплаты</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Время доставки</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Гарантии и ремонт</a></li>
+                    <li><a class="site-footer__link site-footer__link--hover" href="blank.html">Возврат и компенсация</a></li>
                 </ul>
             </div>
         </div>
